--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="#coder #developer #python #web_developer #change_maker #geek" />
-	<meta name="keywords" content="coder,developer,change_maker,geek,python_developer,web_developer" />
+  <meta name="keywords" content="coder,developer,change_maker,geek,python_developer,web_developer" />
   <title>Mohit Chauhan - Web Developer</title>
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -14,6 +15,10 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:900|Ubuntu&display=swap" rel="stylesheet">
+
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico">
 
@@ -23,120 +28,83 @@
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/3ea53c1d6b.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <!--menu-->
-  			<div class='menu' >
+  <section class="main-menu">
+    <div class="container-fluid">
+      <div class="row">
+        <div class='col-md-2 menu'>
 
-  				<!--menu items-->
-  				<nav class='menu-items' >
-  					<ul>
-  						<li>
-  							<a href='#home' data-section='home' >
-  								<i class='ion-ios-home-outline' ></i>
-  								<span>Home</span>
-  							</a>
-  						</li>
-  						<li>
-  							<a href='#about' data-section='about' >
-  								<i class='ion-ios-person-outline' ></i>
-  								<span>About</span>
-  							</a>
-  						</li>
-  						<li>
-  							<a href='#experience' data-section='experience' >
-  								<i class='ion-ios-briefcase-outline' ></i>
-  								<span>Experience</span>
-  							</a>
-  						</li>
+          <!--menu items-->
+          <div class='menu-items'>
+            <ul class="nav flex-column main-menu">
+              <li class="nav-item list first-list">
+                <a class="nav-link active menu-home blue-select" href='#home' id="intro" data-section='home'>
+                  <ion-icon name="home-outline"></ion-icon>
+                  <span>Home</span>
+                </a>
+              </li>
+              <li class="nav-item list">
+                <a class="nav-link active menu-about" href='#about' id="abt" data-section='about'>
+                  <ion-icon name="person-outline"></ion-icon>
+                  <span>About</span>
+                </a>
+              </li>
+              <li class="nav-item list">
+                <a class="nav-link active menu-experience" href='#experience' id="exp" data-section='experience'>
+                  <ion-icon name="business-outline"></ion-icon>
+                  <span>Experience</span>
+                </a>
+              </li>
 
-  						<li>
-  							<a href='./files/ayush_jain_resume.pdf' data-section='resume' target="_blank" >
-  								<i class='ion-ios-paper-outline' ></i>
-  								<span>Resume</span>
-  							</a>
-  						</li>
+              <li class="nav-item list">
+                <a class="nav-link active" href='./files/Mohit_CV.pdf' data-section='resume'>
+                  <ion-icon name="newspaper-outline"></ion-icon>
+                  <span>Resume</span>
+                </a>
+              </li>
 
-  					</ul>
-  				</nav>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-10" id="div1">
+          <section id="home" class="section main-section active">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./images/profile-pic.jpeg" alt="profile-pic">
+                </div>
+                <div class="col-md-9 bio">
+                  <h2 class="heading">Hi, I'm Mohit Chauhan</h2>
+                  <p class="designation">Master's student at the University of Sydney | Ex-Infoscion</p>
+                  <p class="small-intro">Welcome to my space in the internet world!<br />I love networking with new professional acquaintances. Reach out via Email or Call, if you want to talk about new technology or sports</p>
+                  <div class="social-items">
+                    <a href="https://github.com/m10hit" title="GitHub" target="_blank" rel="noreferrer"><i class="fab fa-github fa-2x"></i></a>
+                    <a href="https://www.linkedin.com/in/m10hit/" title="LinkedIn" target="_blank" rel="noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
+                    <a href="https://www.instagram.com/m10hit/?hl=en" title="Instagram" target="_blank" rel="noreferrer"><i class="fab fa-instagram fa-2x"></i></a>
+                    <a href="https://www.facebook.com/m10hit/" title="Facebook" target="_blank" rel="noreferrer"><i class="fab fa-facebook fa-2x"></i></a>
+                    <a href="mailto: mohitchauhan10@gmail.com" title="Email" target="_blank" rel="noreferrer"><i class="fas fa-envelope fa-2x"></i></a>
+                  </div>
+                  <br />
+                  <div class="two-buttons">
+                    <a class="btn btn-primary one-button" href="./files/Mohit_CV.pdf" role="button" target="_blank">Download Resume</a>
+                    <a class="btn btn-outline-primary one-button about-home" href="#about" id="abt" role="button">About Me</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+  </section>
 
-</div>
 
-<section id = "home" class="section main-section active">
-  <div class="container-fluid">
-    <h3 class = "heading">Hi, I am Mohit Chauhan</h3>
-    <p class="designation">Master's student at the University of Sydney | Ex-Infoscion</p>
-    <p class = "small-intro">Welcome to my space in the internet world!<br />I love networking with new professional acquaintances. Reach out via Email or Call, if you want to talk about new technology or sports</p>
-    <a href="https://github.com/m10hit" title="GitHub" target="_blank" rel="noreferrer"><i class="fab fa-github fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/m10hit/" title="LinkedIn" target="_blank" rel="noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
-    <a href="https://www.instagram.com/m10hit/?hl=en" title="Instagram" target="_blank" rel="noreferrer"><i class="fab fa-instagram fa-2x"></i></a>
-    <a href="https://www.facebook.com/m10hit/" title="Facebook" target="_blank" rel="noreferrer"><i class="fab fa-facebook fa-2x"></i></a>
-    <a href="mailto: mohitchauhan10@gmail.com" title="Email" target="_blank" rel="noreferrer"><i class="fas fa-envelope fa-2x"></i></a>
-    <br />
-    <a class="btn btn-success" href="./files/Mohit_CV.pdf" role="button" target="_blank">Download Resume</a>
-    <a class="btn btn-success" href="#" role="button" target="_blank">About Me</a>
-  </div>
-</section>
+
+  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="myscript.js" charset="utf-8"></script>
 </body>
+
 </html>
-
-<section id="about" class="section about-section">
-  <div class="container-fluid">
-    <div class="section-header">
-      <h1>About Me</h1>
-      <p>A developer, a traveller and sports lover</p>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <ul class="info-list">
-          <li>
-            <strong>Name:</strong>
-						<span>Mohit Chauhan</span>
-          </li>
-          <li>
-            <strong>Job:</strong>
-						<span>Currently searching for jobs</span>
-          </li>
-          <li>
-            <strong>Education:</strong>
-						<span>The University of Sydney</span>
-          </li>
-          <li>
-            <strong>Degree:</strong>
-						<span>Master's in IT and IT Management</span>
-          </li>
-
-        </ul>
-      </div>
-      <div class="col-md-8">
-        <div class="about-text">
-          <p>I am currently a final year master's student at the University of Sydney. I enjoy learning new things and love to travel and explore new places.</p>
-          <p>During my spare time, I love watching Football, play Table Tenning or Billiards</p>
-          <p>My friends dscribe me as a person with an eye to detail and a good sense of humour. P.S. I love Spicy Food</p>
-        </div>
-        </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="service">
-          <i class="far fa-keyboard fa-3x"></i>
-          <h4>Code</h4>
-          <p>Making the world a better place</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service">
-          <i class="fas fa-baseball-ball fa-3x"></i>
-          <h4>Play</h4>
-          <p>Strategize over laziness</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service">
-          <i class="fas fa-lightbulb fa-3x"></i>
-          <h4>Work</h4>
-          <p>Be Productive</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
