--- a/intro.html
+++ b/intro.html
@@ -18,9 +18,10 @@
         <br />
         <div class="two-buttons">
           <a class="btn btn-primary one-button" href="./files/Mohit_CV.pdf" role="button" target="_blank">Download Resume</a>
-          <a class="btn btn-outline-primary one-button" href="#" role="button">About Me</a>
+          <a class="btn btn-outline-primary one-button about-page" href="#about" id="abt" role="button">About Me</a>
         </div>
       </div>
     </div>
   </div>
 </section>
+<script src="myscript.js" charset="utf-8"></script>
