--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <br />
                   <div class="two-buttons">
                     <a class="btn btn-primary one-button" href="./files/Mohit_CV.pdf" role="button" target="_blank">Download Resume</a>
-                    <a class="btn btn-outline-primary one-button about-home" href="#about" id="abt" role="button">About Me</a>
+                    <a class="btn btn-outline-primary one-button about-page" href="#about" id="abt" role="button">About Me</a>
                   </div>
                 </div>
               </div>
