minor bug fix in about me button

--- a/intro.html
+++ b/intro.html
@@ -1,10 +1,10 @@
 <section id="home" class="section main-section active">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-sm-3">
         <img src="./images/profile-pic.jpeg" alt="profile-pic">
       </div>
-      <div class="col-md-9 bio">
+      <div class="col-sm-9 bio">
         <h2 class="heading">Hi, I'm Mohit Chauhan</h2>
         <p class="designation">Master's student at the University of Sydney | Ex-Infoscion</p>
         <p class="small-intro">Welcome to my space in the internet world!<br />I love networking with new professional acquaintances. Reach out via Email or Call, if you want to talk about new technology or sports</p>
