--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                   <span>Home</span>
                 </a>
               </li>
+              <li class="nav-item list first-list">
+                <a class="nav-link active menu-project" href='#projects' id="project" data-section='project'>
+                  <ion-icon name="code-outline"></ion-icon>
+                  <span>My Projects</span>
+                </a>
+              </li>
               <li class="nav-item list">
                 <a class="nav-link active menu-about" href='#about' id="abt" data-section='about'>
                   <ion-icon name="person-outline"></ion-icon>
