--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <span>Home</span>
                 </a>
               </li>
-              <li class="nav-item list first-list">
+              <li class="nav-item list">
                 <a class="nav-link active menu-project" href='#projects' id="project" data-section='project'>
                   <ion-icon name="code-outline"></ion-icon>
                   <span>My Projects</span>
