add another project

--- a/project.html
+++ b/project.html
@@ -60,5 +60,16 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card border-dark mb-3" style="max-width: 23rem;">
+          <div class="card-body text-dark">
+            <h5 class="card-title">TinDog</h5>
+            <p class="card-text">A tinder website for Dogs developed using HTML, CSS and Bootstrap (Only Frontend).</p>
+            <a href="https://m10hit.github.io/TinDog/" class="btn btn-primary" target="_blank">Check Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
