--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <section class="main-menu">
     <div class="container-fluid">
       <div class="row">
-        <div class='col-md-2 menu'>
+        <div class='menu'>
 
           <!--menu items-->
           <div class='menu-items'>
