--- a/exp.html
+++ b/exp.html
@@ -19,31 +19,31 @@
               <h4>Infosys Ltd.</h4>
               <ul class='timeline'>
                 <li>
-                  <div class='timeline-multiple-content'><span>Senior Systems Engineer - July 2018 to December 2018</span>
+                  <div class='timeline-multiple-content'><span>Senior SAP MM Support Analyst - July 2018 to December 2018</span>
                     <p>
-                      − Creating and working on change requests like Plant Creation, Purchase Group Creation, Changes in Purchase Order by collaborating with other teams.<br>
-                      − Enhanced communication skills by having a daily call with the client and the manager<br>
+                      − Managed and guide the new resources in the team on the recurring and new issues.<br>
+                      − Co-ordinated with the onshore team to work effectively towards a priority issue.<br>
+                      − Promoted to a senior position within 12 months due to strong performance (6 months ahead of schedule).<br>
+                      − Recognized for helping Application Development (AD) activities and for showing tremendous imrovement.<br>
                     </p>
                   </div>
                 </li>
 
 
                 <li>
-                  <div class='timeline-multiple-content'><span>Systems Engineer - December 2016 to June 2018</span>
+                  <div class='timeline-multiple-content'><span>SAP MM Support Analyst - December 2016 to June 2018</span>
                     <p>
-                      − Responsible for analyzing the requirement of the end-user and focused on a proper resolution within the
-defined Service Level Agreement (SLA) when working as an SAP MM support analyst
-<br>
-                      − Worked on Service Now (Self Service Portal) ticketing tool which follows ITIL standards.<br>
-                      − Handled shopping cart error issues by successfully creating a Purchase Order document for the given shopping cart.<br>
+                      − Analysed the requirement and communicated with the end-user that reduced the resolution time of the tickets by 25% and increased client satisfaction.<br>
+                      − Collaborated with the different functional and technical teams to work on the issues that require modification in multiple SAP modules.<br>
+                      − Designed training and onboarding documents that reduced onboarding time for new hires by 50%.<br>
                     </p>
                   </div>
                 </li>
                 <li>
                   <div class='timeline-multiple-content'><span>Systems Engineer Trainee - June 2016 to November 2018</span>
                     <p>
-                      − Learned Python, RDBMS, Software Engineering Concepts, SAP ABAP as a part of intensive training<br>
-                      − Developed Spa Management System and Railway Management System as the final project<br>
+                      − Successfully completed a 6-months intensive Infosys Training Program in technologies like Python, RDBMS, Software Development Life Cycle (SDLC), and SAP ABAP.<br>
+                      − Improved soft skills like presenting, speaking, writing, listening, and reading as part of the Learning and Development training.<br>
                     </p>
                   </div>
                 </li>
