--- a/exp.html
+++ b/exp.html
@@ -19,10 +19,10 @@
               <h4>Infosys Ltd.</h4>
               <ul class='timeline'>
                 <li>
-                  <div class='timeline-multiple-content'><span>Senior SAP MM Support Analyst - July 2018 to December 2018</span>
+                  <div class='timeline-multiple-content'><span>Senior Support Analyst - July 2018 to December 2018</span>
                     <p>
-                      − Managed and guide the new resources in the team on the recurring and new issues.<br>
-                      − Co-ordinated with the onshore team to work effectively towards a priority issue.<br>
+                      − Managed and guided the new resources in the team on recurring and new issues and familiarised them with the work environment.<br>
+                      − Co-ordinated with the onshore team to perform tasks 60% more effectively towards a priority issue.<br>
                       − Promoted to a senior position within 12 months due to strong performance (6 months ahead of schedule).<br>
                       − Recognized for helping Application Development (AD) activities and for showing tremendous imrovement.<br>
                     </p>
@@ -31,10 +31,10 @@
 
 
                 <li>
-                  <div class='timeline-multiple-content'><span>SAP MM Support Analyst - December 2016 to June 2018</span>
+                  <div class='timeline-multiple-content'><span>Support Analyst - December 2016 to June 2018</span>
                     <p>
                       − Analysed the requirement and communicated with the end-user that reduced the resolution time of the tickets by 25% and increased client satisfaction.<br>
-                      − Collaborated with the different functional and technical teams to work on the issues that require modification in multiple SAP modules.<br>
+                      − Worked cross-functionally with 4 teams to resolve major issues that require modification in multiple modules ahead of the deadline.<br>
                       − Designed training and onboarding documents that reduced onboarding time for new hires by 50%.<br>
                     </p>
                   </div>
@@ -42,7 +42,7 @@
                 <li>
                   <div class='timeline-multiple-content'><span>Systems Engineer Trainee - June 2016 to November 2018</span>
                     <p>
-                      − Successfully completed a 6-months intensive Infosys Training Program in technologies like Python, RDBMS, Software Development Life Cycle (SDLC), and SAP ABAP.<br>
+                      − •	Successfully completed a 6-months intensive Infosys Training Program in technologies like Python, RDBMS, Software Development Life Cycle (SDLC), and SAP ABAP as an Above Average Performer (75-79%).<br>
                       − Improved soft skills like presenting, speaking, writing, listening, and reading as part of the Learning and Development training.<br>
                     </p>
                   </div>
