--- a/project.html
+++ b/project.html
@@ -3,29 +3,39 @@
     <h2>These are the projects that I have worked on</h2>
     <div class="row">
       <div class="col-md-4">
-        <div class="card border-dark mb-3" style="max-width: 23rem;">
+        <div class="card border-dark mb-3" style="max-width: 23rem">
           <div class="card-body text-dark">
             <h5 class="card-title">Blog</h5>
-            <p class="card-text">📝 A blog website where the user can post their blog. Used HTML5, CSS3, Bootstrap, Node.js, Express.js, MongoDB (mongoose), EJS template engine, Lodash utility functions and JavaScript</p>
-            <a href="https://polar-castle-66145.herokuapp.com/" class="btn btn-primary" target="_blank">Check Project</a>
+            <p class="card-text">
+              📝 A blog website where the user can post their blog. Used HTML5,
+              CSS3, Bootstrap, Node.js, Express.js, MongoDB (mongoose), EJS
+              template engine, Lodash utility functions and JavaScript
+            </p>
+            <a
+              href="https://polar-castle-66145.herokuapp.com/"
+              class="btn btn-primary"
+              target="_blank"
+              >Check Project</a
+            >
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card border-dark mb-3" style="max-width: 23rem;">
-          <div class="card-body text-dark">
-            <h5 class="card-title">To Do List App</h5>
-            <p class="card-text">✔️ An application to add the To Do items in a checklist form. The user can also delete the item by just clicking on the checkbox. Used HTML5, CSS3, Bootstrap, Node.js, Express.js, MongoDB (mongoose), EJS template engine, Lodash utility functions and JavaScript</p>
-            <a href="https://gentle-journey-08597.herokuapp.com/" class="btn btn-primary" target="_blank">Check Project</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card border-dark mb-3" style="max-width: 23rem;">
+        <div class="card border-dark mb-3" style="max-width: 23rem">
           <div class="card-body text-dark">
             <h5 class="card-title">Newsletter Sign-up</h5>
-            <p class="card-text">📰 A simple newsletter signup page to allow users to add themselves in the mailing list to receive monthly emails on new tech. Used Mailchimp API to achieve it along with HTML5, CSS3, Bootstrap, Node.js and Express.js</p>
-            <a href="https://secret-temple-21488.herokuapp.com/" class="btn btn-primary" target="_blank">Check Project</a>
+            <p class="card-text">
+              📰 A simple newsletter signup page to allow users to add
+              themselves in the mailing list to receive monthly emails on new
+              tech. Used Mailchimp API to achieve it along with HTML5, CSS3,
+              Bootstrap, Node.js and Express.js
+            </p>
+            <a
+              href="https://secret-temple-21488.herokuapp.com/"
+              class="btn btn-primary"
+              target="_blank"
+              >Check Project</a
+            >
           </div>
         </div>
       </div>
@@ -33,40 +43,77 @@
 
     <div class="row">
       <div class="col-md-4">
-        <div class="card border-dark mb-3" style="max-width: 23rem;">
+        <div class="card border-dark mb-3" style="max-width: 23rem">
           <div class="card-body text-dark">
             <h5 class="card-title">Secrets</h5>
-            <p class="card-text">🤐 An app where a user can sign up and write messages anonymously. Used OAuth2 security to authenticate the user using passport.js. Used EJS, node.js, express.js to develop the app and MongoDB as the database. Further used HTML5, CSS3 and JavaScript</p>
-            <a href="https://github.com/m10hit/secrets" class="btn btn-primary" target="_blank">Check Project</a>
+            <p class="card-text">
+              🤐 An app where a user can sign up and write messages anonymously.
+              Used OAuth2 security to authenticate the user using passport.js.
+              Used EJS, node.js, express.js to develop the app and MongoDB as
+              the database. Further used HTML5, CSS3 and JavaScript
+            </p>
+            <a
+              href="https://github.com/m10hit/secrets"
+              class="btn btn-primary"
+              target="_blank"
+              >Check Project</a
+            >
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card border-dark mb-3" style="max-width: 23rem;">
+        <div class="card border-dark mb-3" style="max-width: 23rem">
           <div class="card-body text-dark">
             <h5 class="card-title">Keeper App</h5>
-            <p class="card-text">📒 A replica of Google Keep created mainly using React.js. Took advantage of .jsx files which can be used to write HTML in the body of JavaScript. Further used CSS to style the page. User can add a title and the description of the note and can also delete the note.</p>
-            <a href="https://github.com/m10hit/keeperapp" class="btn btn-primary" target="_blank">Check Project</a>
+            <p class="card-text">
+              📒 A replica of Google Keep created mainly using React.js. Took
+              advantage of .jsx files which can be used to write HTML in the
+              body of JavaScript. Further used CSS to style the page. User can
+              add a title and the description of the note and can also delete
+              the note.
+            </p>
+            <a
+              href="https://github.com/m10hit/keeperapp"
+              class="btn btn-primary"
+              target="_blank"
+              >Check Project</a
+            >
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card border-dark mb-3" style="max-width: 23rem;">
+        <div class="card border-dark mb-3" style="max-width: 23rem">
           <div class="card-body text-dark">
             <h5 class="card-title">The Simon Game</h5>
-            <p class="card-text">🎮 The famous Simon Game developed using HTML5, CSS3, jQuery and JavaScript</p>
-            <a href="https://m10hit.github.io/Simon-Game/" class="btn btn-primary" target="_blank">Check Project</a>
+            <p class="card-text">
+              🎮 The famous Simon Game developed using HTML5, CSS3, jQuery and
+              JavaScript
+            </p>
+            <a
+              href="https://m10hit.github.io/Simon-Game/"
+              class="btn btn-primary"
+              target="_blank"
+              >Check Project</a
+            >
           </div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
-        <div class="card border-dark mb-3" style="max-width: 23rem;">
+        <div class="card border-dark mb-3" style="max-width: 23rem">
           <div class="card-body text-dark">
             <h5 class="card-title">TinDog</h5>
-            <p class="card-text">A tinder website for Dogs developed using HTML, CSS and Bootstrap (Only Frontend).</p>
-            <a href="https://m10hit.github.io/TinDog/" class="btn btn-primary" target="_blank">Check Project</a>
+            <p class="card-text">
+              A tinder website for Dogs developed using HTML, CSS and Bootstrap
+              (Only Frontend).
+            </p>
+            <a
+              href="https://m10hit.github.io/TinDog/"
+              class="btn btn-primary"
+              target="_blank"
+              >Check Project</a
+            >
           </div>
         </div>
       </div>
